# datalog

./: Cargo.toml  README.md
sql/: experiment.sql
src/: ast.rs  engine.rs  lib.rs  main.rs  parser.rs
