[package]
name = "datalog"
version = "0.1.0"
authors = ["Conrad Dean <conrad.p.dean@gmail.com>"]
edition = "2018"

[dependencies]
rustyline = "4.1.0"
# i can't figure out how to use regex in nom without breaking my editor
regex = "1.1.7"
# instead of implementing relational algebra myself...
rusqlite = "0.23.0"
time = "0.1.42"

[[bin]]
path = "src/main.rs"
name = "datalog"


[dependencies.nom]
version = "5.0.0"
features = ["regexp"]
